Implemented TelegramAPI for Unity❤️

--- a/Runtime/World/LSCore.World.asmdef
+++ b/Runtime/World/LSCore.World.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "LSCore.World",
     "rootNamespace": "",
-    "references": [],
+    "references": ["LSCore.TelegramAPI"],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
