--- a/Runtime/DataStructs/LSCore.DataStructs.asmdef
+++ b/Runtime/DataStructs/LSCore.DataStructs.asmdef
@@ -1,4 +1,16 @@
-﻿{
-  "name": "LSCore.DataStructs",
-  "references":[ "GUID:bb5ab3e5517faff4287376ae8f1fc9fc" ]
+{
+    "name": "LSCore.DataStructs",
+    "rootNamespace": "",
+    "references": [
+        "GUID:bb5ab3e5517faff4287376ae8f1fc9fc"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
