--- a/Runtime/AnimationsModule/MoveItModule/Editor/LSCore.MoveIt.Editor.asmdef
+++ b/Runtime/AnimationsModule/MoveItModule/Editor/LSCore.MoveIt.Editor.asmdef
@@ -1,14 +1,26 @@
 {
-  "name": "LSCore.MoveIt.Editor",
-  "references": [
-    "LSCore.MoveIt",
-    "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
-    "GUID:92e5c6464f52b4648beebefec1c8f137",
-    "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
-    "GUID:96d4cfcb39a2f6449b14b08c0f026129",
-    "GUID:e203c3ad7a7046548ca22a43fa4eb0de",
-    "GUID:16ff3c4c8a84432c968429344c271c5a",
-    "GUID:9c38c981acbf419b9287676bf57791e2",
-    "GUID:a8db40cbaf444aa3aedf3bb887de5433"
-  ]
+    "name": "LSCore.MoveIt.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:74c991897a754b1aa3f74a0a5b294402",
+        "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
+        "GUID:92e5c6464f52b4648beebefec1c8f137",
+        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
+        "GUID:96d4cfcb39a2f6449b14b08c0f026129",
+        "GUID:e203c3ad7a7046548ca22a43fa4eb0de",
+        "GUID:16ff3c4c8a84432c968429344c271c5a",
+        "GUID:9c38c981acbf419b9287676bf57791e2",
+        "GUID:a8db40cbaf444aa3aedf3bb887de5433"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
