--- a/Runtime/AnimationsModule/MoveItModule/LSCore.MoveIt.asmdef
+++ b/Runtime/AnimationsModule/MoveItModule/LSCore.MoveIt.asmdef
@@ -9,7 +9,8 @@
         "GUID:9c38c981acbf419b9287676bf57791e2",
         "GUID:e203c3ad7a7046548ca22a43fa4eb0de",
         "GUID:1bc6eecb763177148a383c0cb9ad9369",
-        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91"
+        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
