Improved and Expanded MoveItModule❤️

--- a/Editor/Themes/LSCore.Editor.Themes.asmdef
+++ b/Editor/Themes/LSCore.Editor.Themes.asmdef
@@ -1,15 +1,22 @@
 {
-    "name": "LSCore.Editor.Themes",
-    "rootNamespace": "",
-    "references": ["GUID:69547e512bbc336429fe7b1bd8b8d3b2","GUID:e203c3ad7a7046548ca22a43fa4eb0de","GUID:2fb5cf31e708b65c6cd386829ff94feb","GUID:1b6b29427dc85403c316475c7068fc50"],
-    "includePlatforms": [
-        "Editor"
-    ],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "autoReferenced": false,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+  "name": "LSCore.Editor.Themes",
+  "rootNamespace": "",
+  "references": [
+    "GUID:e203c3ad7a7046548ca22a43fa4eb0de",
+    "GUID:2fb5cf31e708b65c6cd386829ff94feb",
+    "GUID:1b6b29427dc85403c316475c7068fc50",
+    "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
+    "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
+    "GUID:16ff3c4c8a84432c968429344c271c5a"
+  ],
+  "includePlatforms": [
+    "Editor"
+  ],
+  "excludePlatforms": [],
+  "allowUnsafeCode": false,
+  "overrideReferences": false,
+  "autoReferenced": false,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
