--- a/Runtime/LSDelegates/LSCore.LSDelegates.asmdef
+++ b/Runtime/LSDelegates/LSCore.LSDelegates.asmdef
@@ -8,7 +8,8 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:e2d262c07fab33347bf583c077610e88",
         "GUID:1b6b29427dc85403c316475c7068fc50",
-        "GUID:60589634cd8c5134c4f50388f1b1595b"
+        "GUID:60589634cd8c5134c4f50388f1b1595b",
+        "GUID:9c38c981acbf419b9287676bf57791e2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
