--- a/Runtime/LSDelegates/LSCore.DoIt.asmdef
+++ b/Runtime/LSDelegates/LSCore.DoIt.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "LSCore.LSDelegates",
+    "name": "LSCore.DoIt",
     "rootNamespace": "",
     "references": [
         "GUID:bb5ab3e5517faff4287376ae8f1fc9fc",
