Fixed DoIt asmdef conflicts🐵

--- a/Runtime/ConditionModule/LSCore.ConditionModule.asmdef
+++ b/Runtime/ConditionModule/LSCore.ConditionModule.asmdef
@@ -11,6 +11,7 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
