--- a/Runtime/SingleServiceModule/LSCore.SingleServiceModule.asmdef
+++ b/Runtime/SingleServiceModule/LSCore.SingleServiceModule.asmdef
@@ -9,6 +9,7 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
+    "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
