--- a/Runtime/CurrencyModule/LSCore.CurrencyModule.asmdef
+++ b/Runtime/CurrencyModule/LSCore.CurrencyModule.asmdef
@@ -21,8 +21,8 @@
         "GUID:ffb700c0d477e7cecb82a655db56ffbd",
         "GUID:60589634cd8c5134c4f50388f1b1595b",
         "GUID:b2621ed9809523852c40dfbc7bd87a56",
-        "Unity.TextMeshPro",
-        "Unity.TextMeshPro.Editor"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:6546d7765b4165b40850b3667f981c26"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
