--- a/Runtime/UIModule/LSCore.UIModule.asmdef
+++ b/Runtime/UIModule/LSCore.UIModule.asmdef
@@ -24,8 +24,8 @@
         "GUID:9c38c981acbf419b9287676bf57791e2",
         "GUID:1b6b29427dc85403c316475c7068fc50",
         "GUID:2fb5cf31e708b65c6cd386829ff94feb",
-        "Unity.TextMeshPro",
-        "Unity.TextMeshPro.Editor",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:6546d7765b4165b40850b3667f981c26",
         "GUID:b2621ed9809523852c40dfbc7bd87a56",
         "GUID:60589634cd8c5134c4f50388f1b1595b"
     ],
