--- a/Runtime/UIModule/WindowModule/LSCore.WindowModule.asmdef
+++ b/Runtime/UIModule/WindowModule/LSCore.WindowModule.asmdef
@@ -19,7 +19,7 @@
         "GUID:652f02fbf61e0c14d9f950c935275899",
         "GUID:1b6b29427dc85403c316475c7068fc50",
         "GUID:60589634cd8c5134c4f50388f1b1595b",
-        "Unity.TextMeshPro"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
