--- a/Runtime/DoIt/LSCore.DoIt.asmdef
+++ b/Runtime/DoIt/LSCore.DoIt.asmdef
@@ -11,7 +11,8 @@
         "GUID:60589634cd8c5134c4f50388f1b1595b",
         "GUID:9c38c981acbf419b9287676bf57791e2",
         "GUID:2fb5cf31e708b65c6cd386829ff94feb",
-        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91"
+        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
+        "GUID:b2621ed9809523852c40dfbc7bd87a56"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
