Improved AudioModule❤️ Improved LSToggle logic❤️ Implemented savable settings❤️

--- a/Runtime/AudioModule/LSCore.AudioModule.asmdef
+++ b/Runtime/AudioModule/LSCore.AudioModule.asmdef
@@ -7,7 +7,12 @@
         "GUID:874b5c2f5d24c904483a76df58f4f289",
         "GUID:5bb0561ab59f4090b284fb2dc8ab2482",
         "GUID:247942eb90ec48b696028c8e4c1f8e20",
-        "GUID:e2d262c07fab33347bf583c077610e88"
+        "GUID:e2d262c07fab33347bf583c077610e88",
+        "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
+        "GUID:06eadfe8d4d64d6d814988038dcf79eb",
+        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
+        "GUID:1b6b29427dc85403c316475c7068fc50",
+        "GUID:c5a4bb4647048364bbcbbe6191a94727"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
