--- a/Runtime/UIModule/LSCore.UIModule.asmdef
+++ b/Runtime/UIModule/LSCore.UIModule.asmdef
@@ -27,7 +27,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:6546d7765b4165b40850b3667f981c26",
         "GUID:b2621ed9809523852c40dfbc7bd87a56",
-        "GUID:60589634cd8c5134c4f50388f1b1595b"
+        "GUID:60589634cd8c5134c4f50388f1b1595b",
+        "GUID:06eadfe8d4d64d6d814988038dcf79eb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
