--- a/Runtime/AnimationsModule/LSCore.AnimationsModule.asmdef
+++ b/Runtime/AnimationsModule/LSCore.AnimationsModule.asmdef
@@ -20,7 +20,8 @@
         "GUID:1b6b29427dc85403c316475c7068fc50",
         "GUID:2fb5cf31e708b65c6cd386829ff94feb",
         "GUID:60589634cd8c5134c4f50388f1b1595b",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:5bb0561ab59f4090b284fb2dc8ab2482"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
