--- a/Runtime/Extensions/Unity/LSCore.Extensions.Unity.asmdef
+++ b/Runtime/Extensions/Unity/LSCore.Extensions.Unity.asmdef
@@ -1,13 +1,19 @@
 {
-    "name": "LSCore.Extensions.Unity",
-    "rootNamespace": "",
-    "references": ["GUID:2fb5cf31e708b65c6cd386829ff94feb","GUID:3dd2cb52eff6e5743bdb8fcc64baed91","GUID:9c38c981acbf419b9287676bf57791e2","GUID:e2d262c07fab33347bf583c077610e88"],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": true,
-    "overrideReferences": false,
-    "autoReferenced": false,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+  "name": "LSCore.Extensions.Unity",
+  "rootNamespace": "",
+  "references": [
+    "GUID:2fb5cf31e708b65c6cd386829ff94feb",
+    "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
+    "GUID:9c38c981acbf419b9287676bf57791e2",
+    "GUID:e2d262c07fab33347bf583c077610e88", 
+      "GUID:60589634cd8c5134c4f50388f1b1595b"
+  ],
+  "includePlatforms": [],
+  "excludePlatforms": [],
+  "allowUnsafeCode": true,
+  "overrideReferences": false,
+  "autoReferenced": false,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
