--- a/Runtime/CommonComponents/LSCore.CommonComponents.asmdef
+++ b/Runtime/CommonComponents/LSCore.CommonComponents.asmdef
@@ -1,4 +1,4 @@
 ﻿{
   "name": "LSCore.CommonComponents",
-  "references":[ "GUID:a8db40cbaf444aa3aedf3bb887de5433" ]
+  "references":[ "GUID:a8db40cbaf444aa3aedf3bb887de5433", "GUID:e2d262c07fab33347bf583c077610e88" ]
 }
