--- a/Editor/LSCore.Editor.asmdef
+++ b/Editor/LSCore.Editor.asmdef
@@ -11,7 +11,8 @@
         "GUID:1b6b29427dc85403c316475c7068fc50",
         "GUID:2fb5cf31e708b65c6cd386829ff94feb",
         "GUID:b2621ed9809523852c40dfbc7bd87a56",
-        "GUID:60589634cd8c5134c4f50388f1b1595b"
+        "GUID:60589634cd8c5134c4f50388f1b1595b",
+        "GUID:bb5ab3e5517faff4287376ae8f1fc9fc"
     ],
     "includePlatforms": [
         "Editor"
