--- a/Runtime/AudioModule/LSCore.AudioModule.asmdef
+++ b/Runtime/AudioModule/LSCore.AudioModule.asmdef
@@ -12,7 +12,8 @@
         "GUID:06eadfe8d4d64d6d814988038dcf79eb",
         "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
         "GUID:1b6b29427dc85403c316475c7068fc50",
-        "GUID:c5a4bb4647048364bbcbbe6191a94727"
+        "GUID:c5a4bb4647048364bbcbbe6191a94727",
+        "GUID:bb5ab3e5517faff4287376ae8f1fc9fc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
