Fixed EventSystem bug❤️

--- a/Runtime/LevelSystem/LSCore.LevelSystem.asmdef
+++ b/Runtime/LevelSystem/LSCore.LevelSystem.asmdef
@@ -10,7 +10,8 @@
         "GUID:06eadfe8d4d64d6d814988038dcf79eb",
         "GUID:e2d262c07fab33347bf583c077610e88",
         "GUID:1b6b29427dc85403c316475c7068fc50",
-        "GUID:ffb700c0d477e7cecb82a655db56ffbd"
+        "GUID:ffb700c0d477e7cecb82a655db56ffbd",
+        "GUID:3dd2cb52eff6e5743bdb8fcc64baed91"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
