--- a/Runtime/UIModule/WindowModule/LSCore.WindowModule.asmdef
+++ b/Runtime/UIModule/WindowModule/LSCore.WindowModule.asmdef
@@ -19,7 +19,8 @@
         "GUID:652f02fbf61e0c14d9f950c935275899",
         "GUID:1b6b29427dc85403c316475c7068fc50",
         "GUID:60589634cd8c5134c4f50388f1b1595b",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:06eadfe8d4d64d6d814988038dcf79eb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
