--- a/Runtime/NativeUtils/LSCore.NativeUtils.asmdef
+++ b/Runtime/NativeUtils/LSCore.NativeUtils.asmdef
@@ -7,7 +7,8 @@
         "GUID:a8db40cbaf444aa3aedf3bb887de5433",
         "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
         "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
-        "GUID:9c38c981acbf419b9287676bf57791e2"
+        "GUID:9c38c981acbf419b9287676bf57791e2",
+        "GUID:e2d262c07fab33347bf583c077610e88"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
