--- a/Runtime/AnimationsModule/MoveItModule/LSCore.MoveIt.asmdef
+++ b/Runtime/AnimationsModule/MoveItModule/LSCore.MoveIt.asmdef
@@ -11,7 +11,8 @@
         "GUID:1bc6eecb763177148a383c0cb9ad9369",
         "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
-        "GUID:1b6b29427dc85403c316475c7068fc50"
+        "GUID:1b6b29427dc85403c316475c7068fc50",
+      "LSCore.Utils"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
