--- a/Runtime/Extensions/Unity/LSCore.Extensions.Unity.asmdef
+++ b/Runtime/Extensions/Unity/LSCore.Extensions.Unity.asmdef
@@ -6,7 +6,8 @@
     "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
     "GUID:9c38c981acbf419b9287676bf57791e2",
     "GUID:e2d262c07fab33347bf583c077610e88", 
-      "GUID:60589634cd8c5134c4f50388f1b1595b"
+      "GUID:60589634cd8c5134c4f50388f1b1595b",
+    "LSCore.Utils"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
