--- a/Runtime/LocalizationModule/LSCore.LocalizationModule.asmdef
+++ b/Runtime/LocalizationModule/LSCore.LocalizationModule.asmdef
@@ -6,7 +6,8 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:874b5c2f5d24c904483a76df58f4f289",
         "GUID:e2d262c07fab33347bf583c077610e88",
-        "GUID:e203c3ad7a7046548ca22a43fa4eb0de"
+        "GUID:e203c3ad7a7046548ca22a43fa4eb0de",
+      "LSCore.Utils"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
