--- a/ExternalPlugins/Lottie/LSCore.Lottie.asmdef
+++ b/ExternalPlugins/Lottie/LSCore.Lottie.asmdef
@@ -1,14 +1,22 @@
 {
-    "name": "LSCore.Lottie",
-    "rootNamespace": "",
-    "references": ["GUID:d426b638445cc2f428ed8ba7c1325767","GUID:1b6b29427dc85403c316475c7068fc50"],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": true,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+  "name": "LSCore.Lottie",
+  "rootNamespace": "",
+  "references": [
+    "GUID:d426b638445cc2f428ed8ba7c1325767",
+    "GUID:1b6b29427dc85403c316475c7068fc50",
+    "GUID:2fb5cf31e708b65c6cd386829ff94feb",
+    "GUID:b2621ed9809523852c40dfbc7bd87a56",
+    "GUID:e2d262c07fab33347bf583c077610e88",
+    "GUID:a8db40cbaf444aa3aedf3bb887de5433",
+    "GUID:3dd2cb52eff6e5743bdb8fcc64baed91"
+  ],
+  "includePlatforms": [],
+  "excludePlatforms": [],
+  "allowUnsafeCode": true,
+  "overrideReferences": false,
+  "precompiledReferences": [],
+  "autoReferenced": true,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
