--- a/Runtime/AnimationsModule/Lottie/LSCore.Lottie.asmdef
+++ b/Runtime/AnimationsModule/Lottie/LSCore.Lottie.asmdef
@@ -9,7 +9,8 @@
     "GUID:e2d262c07fab33347bf583c077610e88",
     "GUID:a8db40cbaf444aa3aedf3bb887de5433",
     "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
-    "GUID:60589634cd8c5134c4f50388f1b1595b"
+    "GUID:60589634cd8c5134c4f50388f1b1595b",
+    "GUID:652f02fbf61e0c14d9f950c935275899"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
