--- a/Editor/WindowExtensions/LSCore.Editor.WindowExtensions.asmdef
+++ b/Editor/WindowExtensions/LSCore.Editor.WindowExtensions.asmdef
@@ -8,7 +8,8 @@
         "Unity.Localization",
         "Unity.ResourceManager",
         "GUID:b2621ed9809523852c40dfbc7bd87a56",
-        "GUID:60589634cd8c5134c4f50388f1b1595b"
+        "GUID:60589634cd8c5134c4f50388f1b1595b",
+        "GUID:e2d262c07fab33347bf583c077610e88"
     ],
     "includePlatforms": [
         "Editor"
