--- a/Runtime/AnimationsModule/Lottie/LSCore.Lottie.asmdef
+++ b/Runtime/AnimationsModule/Lottie/LSCore.Lottie.asmdef
@@ -11,8 +11,7 @@
     "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
     "GUID:60589634cd8c5134c4f50388f1b1595b",
     "GUID:652f02fbf61e0c14d9f950c935275899",
-    "GUID:9c38c981acbf419b9287676bf57791e2",
-    "Unity.Burst"
+    "GUID:9c38c981acbf419b9287676bf57791e2"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
