--- a/ExternalPlugins/AsyncTextureApplier/LSCore.AsyncTextureApplier.asmdef
+++ b/ExternalPlugins/AsyncTextureApplier/LSCore.AsyncTextureApplier.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "LSCore.AsyncTextureApplier",
-    "references": [],
+    "references": ["GUID:e2d262c07fab33347bf583c077610e88"],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
