--- a/Runtime/NativeUtils/LSCore.NativeUtils.asmdef
+++ b/Runtime/NativeUtils/LSCore.NativeUtils.asmdef
@@ -8,10 +8,10 @@
         "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
         "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
         "GUID:9c38c981acbf419b9287676bf57791e2",
-        "GUID:e2d262c07fab33347bf583c077610e88", 
-        "OneSignal.Core", 
-        "GUID:5bb0561ab59f4090b284fb2dc8ab2482",
-      "LSCore.Utils"
+        "GUID:e2d262c07fab33347bf583c077610e88",
+        "GUID:5bb0561ab59f4090b284fb2dc8ab2482", 
+        "LSCore.Utils",
+      "OneSignal.Core"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
