--- a/Runtime/DailyRewardsModule/LSCore.DailyRewardsModule.asmdef
+++ b/Runtime/DailyRewardsModule/LSCore.DailyRewardsModule.asmdef
@@ -12,7 +12,8 @@
         "GUID:7d47bdd0b4734221a4f1a8d8b153ebb3",
         "GUID:5bb0561ab59f4090b284fb2dc8ab2482",
         "GUID:b8174984431948ae8b532ea76c54d68a",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:8e59db2df97ce194686d8706f24fc1e2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
