--- a/Editor/WindowExtensions/LSCore.Editor.WindowExtensions.asmdef
+++ b/Editor/WindowExtensions/LSCore.Editor.WindowExtensions.asmdef
@@ -9,7 +9,9 @@
         "Unity.ResourceManager",
         "GUID:b2621ed9809523852c40dfbc7bd87a56",
         "GUID:60589634cd8c5134c4f50388f1b1595b",
-        "GUID:e2d262c07fab33347bf583c077610e88"
+        "GUID:e2d262c07fab33347bf583c077610e88",
+        "GUID:bb5ab3e5517faff4287376ae8f1fc9fc",
+        "GUID:1b6b29427dc85403c316475c7068fc50"
     ],
     "includePlatforms": [
         "Editor"
