--- a/Runtime/AnimationsModule/LSCore.AnimationsModule.asmdef
+++ b/Runtime/AnimationsModule/LSCore.AnimationsModule.asmdef
@@ -21,7 +21,8 @@
         "GUID:2fb5cf31e708b65c6cd386829ff94feb",
         "GUID:60589634cd8c5134c4f50388f1b1595b",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:5bb0561ab59f4090b284fb2dc8ab2482"
+        "GUID:5bb0561ab59f4090b284fb2dc8ab2482",
+        "GUID:74c991897a754b1aa3f74a0a5b294402"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
