--- a/Runtime/DailyRewardsModule/LSCore.DailyRewardsModule.asmdef
+++ b/Runtime/DailyRewardsModule/LSCore.DailyRewardsModule.asmdef
@@ -13,7 +13,8 @@
         "GUID:5bb0561ab59f4090b284fb2dc8ab2482",
         "GUID:b8174984431948ae8b532ea76c54d68a",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:8e59db2df97ce194686d8706f24fc1e2"
+        "GUID:8e59db2df97ce194686d8706f24fc1e2",
+        "GUID:e2d262c07fab33347bf583c077610e88"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
