--- a/Runtime/DailyRewardsModule/LSCore.DailyRewardsModule.asmdef
+++ b/Runtime/DailyRewardsModule/LSCore.DailyRewardsModule.asmdef
@@ -14,7 +14,8 @@
         "GUID:b8174984431948ae8b532ea76c54d68a",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:8e59db2df97ce194686d8706f24fc1e2",
-        "GUID:e2d262c07fab33347bf583c077610e88"
+        "GUID:e2d262c07fab33347bf583c077610e88",
+        "GUID:3829f9b575f54b71b5481f77dcaaea1f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
