--- a/Runtime/AudioModule/LSCore.AudioModule.asmdef
+++ b/Runtime/AudioModule/LSCore.AudioModule.asmdef
@@ -13,7 +13,8 @@
         "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
         "GUID:1b6b29427dc85403c316475c7068fc50",
         "GUID:c5a4bb4647048364bbcbbe6191a94727",
-        "GUID:bb5ab3e5517faff4287376ae8f1fc9fc"
+        "GUID:bb5ab3e5517faff4287376ae8f1fc9fc",
+        "GUID:a8db40cbaf444aa3aedf3bb887de5433"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
