--- a/Runtime/Extensions/LSCore.Extensions.asmdef
+++ b/Runtime/Extensions/LSCore.Extensions.asmdef
@@ -4,7 +4,8 @@
   "references": [
     "GUID:60589634cd8c5134c4f50388f1b1595b",
     "GUID:2fb5cf31e708b65c6cd386829ff94feb",
-    "GUID:b2621ed9809523852c40dfbc7bd87a56"
+    "GUID:b2621ed9809523852c40dfbc7bd87a56",
+    "GUID:e2d262c07fab33347bf583c077610e88"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
