--- a/Runtime/ConfigModule/LSCore.ConfigModule.asmdef
+++ b/Runtime/ConfigModule/LSCore.ConfigModule.asmdef
@@ -8,7 +8,8 @@
         "GUID:3dd2cb52eff6e5743bdb8fcc64baed91",
         "GUID:bb5ab3e5517faff4287376ae8f1fc9fc",
         "GUID:1b6b29427dc85403c316475c7068fc50",
-        "GUID:2fb5cf31e708b65c6cd386829ff94feb"
+        "GUID:2fb5cf31e708b65c6cd386829ff94feb",
+        "GUID:5bb0561ab59f4090b284fb2dc8ab2482"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
