--- a/Runtime/Async/LSCore.Async.asmdef
+++ b/Runtime/Async/LSCore.Async.asmdef
@@ -1,4 +1,4 @@
 ﻿{
   "name": "LSCore.Async",
-  "references":[ "GUID:e2d262c07fab33347bf583c077610e88", "GUID:58d36a8de6484fa1904a1be4fb03ac3a" ]
+  "references":[ "GUID:e2d262c07fab33347bf583c077610e88" ]
 }
