--- a/Runtime/UIModule/LSCore.UIModule.asmdef
+++ b/Runtime/UIModule/LSCore.UIModule.asmdef
@@ -30,7 +30,8 @@
         "GUID:60589634cd8c5134c4f50388f1b1595b",
         "GUID:06eadfe8d4d64d6d814988038dcf79eb",
         "GUID:1bc6eecb763177148a383c0cb9ad9369",
-        "GUID:488fbb5f4bad8a94daedd0c8d1239e93"
+        "GUID:488fbb5f4bad8a94daedd0c8d1239e93",
+        "GUID:7d47bdd0b4734221a4f1a8d8b153ebb3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
